// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Copy Always Show 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI sc-AjmGg ceYMaG iAHxUc"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI sc-fyrocj dljPk jxvgud"
      >
        <div
          class="sc-gKclnd iQIogj sc-iCfMLu frGhDt sc-hGPBjI kBwkZQ"
        >
          <div
            class="sc-iqVWFU hIAseQ"
          >
            <div
              class="sc-eWfVMQ kmJZgg sc-jKTccl fWCWlF"
            >
              <div
                data-display="table-head"
              >
                <div
                  data-display="table-row"
                >
                  <div
                    data-display="table-cell"
                  >
                    Name
                  </div>
                  <div
                    data-display="table-cell"
                  >
                    Value
                  </div>
                </div>
              </div>
              <div
                data-display="table-body"
              >
                <div
                  class=""
                  data-display="table-row"
                  data-highlight="false"
                >
                  <a
                    data-display="table-cell"
                    data-key="0"
                  >
                    Type
                  </a>
                  <a
                    data-display="table-cell"
                    data-key="0"
                  >
                    Beginner
                  </a>
                </div>
                <div
                  class=""
                  data-display="table-row"
                  data-highlight="false"
                >
                  <a
                    data-display="table-cell"
                    data-key="1"
                  >
                    Type
                  </a>
                  <a
                    data-display="table-cell"
                    data-key="1"
                  >
                    Advanced
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu eAnCiV sc-cNKqjZ ivzBas"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-copy fa-w-14 "
          data-icon="copy"
          data-prefix="far"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Copy Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI sc-AjmGg ceYMaG iAHxUc"
    >
      <div
        class="sc-fKVqWL hOcWtv sc-bBHxTw bFNBkh"
      >
        Hover me and click on icon to copy
      </div>
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu eAnCiV sc-cNKqjZ ivzBas"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-copy fa-w-14 "
          data-icon="copy"
          data-prefix="far"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Copy Icon Only 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu fBDGQC"
    >
      Only copy icon that can be placed anywhere.
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI sc-AjmGg ceYMaG gJYgEr"
      >
        <div
          class="sc-gKclnd exdBHI sc-iCfMLu eAnCiV sc-cNKqjZ ivzBas"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-copy fa-w-14 "
            data-icon="copy"
            data-prefix="far"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Copy With Tag 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI sc-AjmGg ceYMaG iAHxUc"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI dljPk sc-Galmp bbmiOB"
      >
        <div
          class="sc-gKclnd exdBHI sc-iCfMLu iBWwlp sc-hGPBjI sc-clIzBv dljPk gdoIZr"
        >
          <div
            class="sc-fKVqWL gNOvvf sc-bBHxTw ggLQNJ"
          >
            Type: 
          </div>
          <div
            class="sc-fKVqWL Gjjzu sc-bBHxTw ggLQNJ"
          >
            Beginner
          </div>
        </div>
      </div>
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu eAnCiV sc-cNKqjZ ivzBas"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-copy fa-w-14 "
          data-icon="copy"
          data-prefix="far"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
